<resources>
    <string name="consumer_app_name">EasyConsumer</string>
    <string name="consumer_authorize">authorize</string>
    <string name="consumer_clear_auth">clear token</string>
    <string name="consumer_refresh_auth">refresh token</string>
    <string name="consumer_fmt_friends">Following %s</string>
    <string name="consumer_followed">following</string>
    <string name="consumer_follow">follow</string>
    <string name="consumer_bitmap" translatable="false">Bitmap</string>
</resources>
